--- a/tictactoe/css/style.css
+++ b/tictactoe/css/style.css
@@ -15,13 +15,13 @@ body {
 }
 
 .player.active {
-    color: red;
 	font-weight: bold;
+	color: red;
 }
 
 #table_game {
 	border-collapse: collapse;
-    margin: 100px auto;
+    margin: 50px auto;
 }
 
 .col {
@@ -34,4 +34,40 @@ body {
 .col:hover {
 	background: #E3DCCC;
 	cursor: pointer;
+}
+
+.win {
+	border: 1px solid rgb(11, 105, 66);
+	background: yellowgreen;
+	color: rgb(11, 105, 66);
+}
+
+#msg {
+	text-align: center;
+	margin: 50px auto 0px;
+	font-weight: bold;
+	border: 1px solid rgb(11, 105, 66);
+	display: none;
+	width: 50%;
+	padding: 20px;
+	background: yellow;
+	color: rgb(11, 105, 66);
+	border-radius: 10px;
+}
+
+#scores {
+	display: flex;
+	width: 50%;
+	margin: auto;
+}
+
+.score {
+	width: 50%;
+	text-align: center;
+	font-size: 20px;
+}
+
+a {
+	color: red;
+	text-decoration: none;
 }
